// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shelf Button should render default shelf button 1`] = `
<Hidden
  aboveMobile={false}
  className="root"
  component="span"
  desktop={false}
  mobile={false}
  print={false}
  screen={false}
>
  <Text
    baseline={false}
    className="shelfLinkText"
    whispering={true}
  >
    1 hour ago
  </Text>
</Hidden>
`;

exports[`Shelf Button should render shelf button with applied date 1`] = `
<Hidden
  aboveMobile={false}
  className="root"
  component="span"
  desktop={false}
  mobile={false}
  print={false}
  screen={false}
>
  <Text
    baseline={false}
    className="shelfLinkText"
    whispering={true}
  >
    1 hour ago
  </Text>
</Hidden>
`;

exports[`Shelf Button should render shelf button with featured label 1`] = `
<Hidden
  aboveMobile={false}
  className="root"
  component="span"
  desktop={false}
  mobile={false}
  print={false}
  screen={false}
>
  <Text
    baseline={false}
    className="shelfLinkText"
    whispering={true}
  >
    1 hour ago
  </Text>
</Hidden>
`;

exports[`Shelf Button should render shelf button with shelf 1`] = `
<Hidden
  aboveMobile={false}
  className="root"
  component="span"
  desktop={false}
  mobile={false}
  print={false}
  screen={false}
>
  <Text
    baseline={false}
    className="shelfLinkText"
    whispering={true}
  >
    1 hour ago
  </Text>
  <Hidden
    aboveMobile={false}
    className="moreWrapper"
    component="span"
    desktop={false}
    mobile={true}
    print={false}
    screen={false}
  >
    <Text
      baseline={false}
      className="separatorDot"
      whispering={true}
    >
      •
    </Text>
    <Text
      baseline={false}
      className="shelfLinkText shelfToggle"
      onClick={[Function]}
      whispering={true}
    >
      more
       
      <ChevronIcon
        className=""
        direction="down"
        svgClassName="shelfToggleIcon"
      />
    </Text>
  </Hidden>
</Hidden>
`;

exports[`Shelf Button should render shelf button with shelf and openned style 1`] = `
<Hidden
  aboveMobile={false}
  className="root"
  component="span"
  desktop={false}
  mobile={false}
  print={false}
  screen={false}
>
  <Text
    baseline={false}
    className="shelfLinkText"
    whispering={true}
  >
    1 hour ago
  </Text>
  <Hidden
    aboveMobile={false}
    className="moreWrapper"
    component="span"
    desktop={false}
    mobile={true}
    print={false}
    screen={false}
  >
    <Text
      baseline={false}
      className="separatorDot"
      whispering={true}
    >
      •
    </Text>
    <Text
      baseline={false}
      className="shelfLinkText shelfToggle"
      onClick={[Function]}
      whispering={true}
    >
      less
       
      <ChevronIcon
        className=""
        direction="up"
        svgClassName="shelfToggleIcon"
      />
    </Text>
  </Hidden>
</Hidden>
`;
